2006-09-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/redboot.cdl: Fix description of CYGSEM_REDBOOT_DISK_IDE.
	Error pointed out by Wang Cui

2006-08-28  Sergei Gavrikov  <w3sg@SoftHome.net>

	* src/net/tftp_client.c (tftp_error_ack): Fix compiler warnings.

2006-07-21  David Ho <davidkwho@gmail.com>

	* src/flash.c (fis_start_update_directory): Fix build error when
	redundant FIS selected and locking is not enabled/supported.

2006-05-24  Gary Thomas  <gary@mlbassoc.com>

	* src/net/net_io.c (do_ip_addr): Bail out if no networking.

2006-05-23  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_update_directory): Fix problems building on systems
	with no FLASH locking.

2006-04-19 Alexander Neundorf <alexander.neundorf@jenoptik.com>
	* src/flash.c, src/main.c, src/fconfig.c: 
        * include/fis.h, include/redboot.h:
        * cdl/redboot.cdl:
        add support for redundant FIS tables, configurable via CYGOPT_REDBOOT_REDUNDANT_FIS

2006-04-07  Grant Edwards <grante@visi.com>

	* src/net/net_io.c (net_io_getc_nonblock): 
	Handle TELNET_WILL (reject same as TELNET_DO)

2006-04-03  Lars Povlsen  <lpovlsen@vitesse.com>
 
 	* src/flash.c (fis_update_directory): Fixed flash region size when
	CYGSEM_REDBOOT_FLASH_COMBINED_FIS_AND_CONFIG is enabled.
 
2006-03-27  Gary Thomas  <gary@mlbassoc.com>

	* src/net/tcp.c (__tcp_write_block): Fix calculation of actual
	total number of bytes sent (from Wolfgang Koebler)

2006-02-25  Oliver Munz  <munz@speag.ch>
	    Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* src/xyzModem.c (xyzModem_stream_open): Fix compiler warnings.
	* src/flash_load.c (NEW): Implements access to flash
	* src/load.c: Allow load command to load directly into flash
	* cdl/redboot.c (CYGBLD_REDBOOT_LOAD_INTO_FLASH) Control new
	feature, disabled by default.
	* cdl/main.c (cyg_start): Assert check to see if we have 
	overflowed the workspace.
	* doc/redboot_cmds.sgml: Document new flag.
	
2006-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
